--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body,html {
     font-family: 'Roboto Slab', serif;
     font-weight:regular;
     color:#fff;
-    background:rgb(0, 0, 0);
+    background:transparent;
     scroll-behavior: smooth;
 }
 body {
@@ -18,7 +18,7 @@ body {
     width: 100vw;
     height: 100vh;
     position: fixed;
-    background: #000;
+    background: #000911;
     z-index: 999;
     display: flex;
     justify-content: center;
@@ -30,7 +30,7 @@ body {
     width:60px;
     height:60px;
     border:6px solid #fff;
-    border-bottom:6px solid #000;
+    border-bottom:6px solid #000911;
     border-radius:50%;
     margin:0;
 }
@@ -51,15 +51,7 @@ body {
 }
 #title {
     font-size:100px;
-    background-image: linear-gradient(to left, #ffffff, #ffffff 100%);
-    -webkit-background-clip:text;
-    background-clip:text;
-    -webkit-text-fill-color: transparent;
-    background-size:500% 500% !important;
-    -webkit-animation: Gradient 20s ease infinite;
-    -moz-animation: Gradient 20s ease infinite;
-    -o-animation: Gradient 20s ease infinite;
-    animation: Gradient 20s ease infinite;
+    color: white;
     font-family: 'Bungee';
 }
 #links {
@@ -82,19 +74,25 @@ body {
 #middle {
     width:100%;
     height:100vh;
-    background:linear-gradient(0deg,rgb(0, 0, 0),rgba(0,0,0,0)); 
+    background: transparent; 
     }
+
 #tagline {
     font-size:50px;
     width:60%;
 }
+/* this is the main body */
 #portfolio {
     width:80%;
     padding:2% 10%;
+    padding-top: 40vh;
+    background: transparent;
 }
+
+/* this is the gradient animated headers */
 #portfolio div h1 {
     font-size:40px;
-    background: linear-gradient(-45deg, #f6f1d3, #648880, #293f50);
+    background: linear-gradient(-45deg, #f6f1d3, #397c6e, #113b5c);
     -webkit-background-clip:text;
     background-clip:text;
     -webkit-text-fill-color: transparent;
@@ -104,6 +102,7 @@ body {
     -o-animation: Gradient 20s ease infinite;
     animation: Gradient 20s ease infinite;
     font-family: 'Bungee';
+    
 }
 #skills {
     margin:4vh 0px !important;
@@ -227,7 +226,7 @@ body {
 }
 #footer a {
     font-size:18px;
-    background-image: linear-gradient(to left, #FF416C 0%, #FF4B2B 100%);
+    background-image: linear-gradient(to left, #ff41a0 0%, #535353 100%);
     -webkit-background-clip:text;
     background-clip:text;
     -webkit-text-fill-color: transparent;
@@ -271,6 +270,7 @@ button:focus {
 100% {background-position: 0% 50%}
 }
 
+/* scroll to top button */
 .scrollToTopBtn {
     background-color: black;
     border: black;
@@ -300,6 +300,7 @@ button:focus {
     transform: translateY(0);
   }
 
+  /* class for image gallery */
   .portimg {
     max-width: 33%;
   }
@@ -315,11 +316,13 @@ button:focus {
 		background-position: 0% 50%;
 	}
 }
+
+/* this is the one I adjusted to sort the animated header dimensions out */
 body {
-	background: radial-gradient(#f6f1d3, #648880, #293f50, #062238, #000c14);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100vh;
+	background: radial-gradient(at 90% top, #f6f1d3, #648880, #293f50, #062238, #000c14);
+	background-size: 500% 500%;
+	animation: gradient 20s ease infinite;
+	height: 80vh;
   
 }
 
@@ -334,3 +337,87 @@ body {
 		background-position: 0% 50%;
 	}
 }
+
+/* this one adds extra padding beneath the science section */  
+.row { 
+    padding-bottom: 35vh;
+}
+
+.column {
+    float: left;
+    width: 33.33%;
+  }
+  
+  /* this stuff all relates to the hover over bits in the science section */
+  .tooltip {
+    display:inline-block;
+    position:relative;
+    border-bottom:0px dotted #666;
+    text-align:center;
+}
+
+.tooltip .bottom {
+    min-width:200px; 
+    top:120px;
+    left:50%;
+    transform:translate(-50%, 0);
+    padding:10px 20px;
+    color:#FFFFFF;
+    background-color:#333333;
+    font-weight:normal;
+    font-size:13px;
+    border-radius:8px;
+    position:absolute;
+    z-index:99999999;
+    box-sizing:border-box;
+    border:1px solid #333333;box-shadow:0 1px 8px rgba(0,0,0,0.5);
+    visibility:hidden; opacity:0; transition:opacity 0.8s;
+}
+
+.tooltip:hover .bottom {
+    visibility:visible; opacity:1;
+}
+
+.tooltip .bottom i {
+    position:absolute;
+    bottom:100%;
+    left:50%;
+    margin-left:-12px;
+    width:24px;
+    height:12px;
+    overflow:hidden;
+}
+
+.tooltip .bottom i::after {
+    content:'';
+    position:absolute;
+    width:12px;
+    height:12px;
+    left:50%;
+    transform:translate(-50%,50%) rotate(45deg);
+    background-color:#333333;
+    border:1px solid #333333;box-shadow:0 1px 8px rgba(0,0,0,0.5);
+}
+
+/* this centers my hover over images and also adjusts the size */
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+/* clicky tool tip */
+
+tippy(".item", {
+    trigger: 'click',
+    content: `item info`,
+    allowHTML: true,
+    animation: 'fade',
+    onShow(instance) {
+      let element = instance.reference;
+      instance.setContent(element.getAttribute('data-info'));
+      //console.log(instance);
+    },
+  });
+ 
