--- a/index.css
+++ b/index.css
@@ -10,7 +10,9 @@ body,html {
     color:#fff;
     background:transparent;
     scroll-behavior: smooth;
+
 }
+
 body {
     cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🚀</text></svg>") 16 0,auto; /*!emojicursor.app*/
   }
@@ -55,7 +57,7 @@ body {
     font-family: 'Bungee';
 }
 #links {
-    font-size:32px;
+    font-size: 32px;
     margin:40px 0px;
     transition:0.6s ease-in-out;
     color:#ffffff;
@@ -226,7 +228,7 @@ body {
 }
 #footer a {
     font-size:18px;
-    background-image: linear-gradient(to left, #ff41a0 0%, #535353 100%);
+    background-image: linear-gradient(to left, rgba(255, 0, 255, 0.75) 0%, rgba(0, 255, 255, 0.750) 100%);
     -webkit-background-clip:text;
     background-clip:text;
     -webkit-text-fill-color: transparent;
@@ -303,6 +305,7 @@ button:focus {
   /* class for image gallery */
   .portimg {
     max-width: 33%;
+    object-fit: contain;
   }
 
   @keyframes gradient {
@@ -319,9 +322,9 @@ button:focus {
 
 /* this is the one I adjusted to sort the animated header dimensions out */
 body {
-	background: radial-gradient(at 90% top, #f6f1d3, #648880, #293f50, #062238, #000c14);
-	background-size: 500% 500%;
-	animation: gradient 20s ease infinite;
+	background: radial-gradient(at top, #f6f1d3, #648880, #293f50, #062238, #000c14);
+	background-size: 300% 2500%;
+	animation: gradient 30s ease infinite;
 	height: 80vh;
   
 }
@@ -363,14 +366,14 @@ body {
     transform:translate(-50%, 0);
     padding:10px 20px;
     color:#FFFFFF;
-    background-color:#12121262;
+    background-color:#121212;
     font-weight:normal;
     font-size:13px;
     border-radius:8px;
     position:absolute;
     z-index:99999999;
     box-sizing:border-box;
-    border:1px solid #12121262;box-shadow:0 1px 8px rgba(0,0,0,0.5);
+    border:1px solid #121212;box-shadow:0 1px 8px rgba(0,0,0,0.5);
     visibility:hidden; opacity:0; transition:opacity 0.8s;
 }
 
@@ -395,8 +398,8 @@ body {
     height:12px;
     left:50%;
     transform:translate(-50%,50%) rotate(45deg);
-    background-color:#12121262;
-    border:1px solid #12121262;box-shadow:0 1px 8px rgba(0,0,0,0.5);
+    background-color:#121212;
+    border:1px solid #121212;box-shadow:0 1px 8px rgba(0,0,0,0.5);
 }
 
 /* this centers my hover over images and also adjusts the size */
@@ -405,6 +408,147 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+   
   }
 
- 
+  /* try to make header links bigger */
+
+  .biglinks {
+    font-size: 300%;
+    font-weight: bold;
+  }
+ /* maybe nice cards instead of tool tips */
+
+  .container{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap:wrap;
+    margin-left: auto;
+    margin-right: auto;
+    
+  }
+  
+  .container .card{
+    position: relative;
+  }
+  
+  .container .card .face{
+    width:300px;
+    height: 200px;
+    transition:.4s;
+    
+  }
+  
+  .container .card .face.face1{
+    position: relative;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-content:center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+  }
+  
+  .container .card:hover .face.face1{
+    transform: translateY(0);
+    box-shadow:
+      inset 0 0 60px rgb(120, 120, 120),
+      inset 20px 0 80px #f0f,
+      inset -20px 0 80px #0ff,
+      inset 20px 0 300px #f0f,
+      inset -20px 0 300px #0ff,
+      0 0 50px #fff,
+      -10px 0 80px #f0f,
+      10px 0 80px #0ff;
+     
+  }
+  
+  
+  .container .card .face.face1 .content{
+    opacity: .2;
+    transition:  0.5s;
+    text-align: center;
+    
+     
+    
+    
+   
+  
+  }
+  
+  .container .card:hover .face.face1 .content{
+    opacity: 1;
+   
+  }
+  
+  .container .card .face.face1 .content i{
+    font-size: 3em;
+    color: white;
+    display: inline-block;
+     
+  }
+  
+  .container .card .face.face1 .content h3{
+    font-size: 1em;
+    color: white;
+    text-align: center;
+    
+  
+  }
+  
+  .container .card .face.face1 .content a{
+     transition: .5s;
+  }
+  
+  .container .card .face.face2{
+     position: relative;
+     background: rgba(245, 245, 245, 0.501);
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     text-align: center;
+     padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0,0,0,.8);
+    transform: translateY(-100px);
+  }
+  
+  .container .card:hover .face.face2{
+      transform: translateY(0);
+  
+  
+  }
+  
+  .container .card .face.face2 .content p, a{
+    font-size: 10pt;
+    margin: 0 ;
+    padding: 0;
+    color:#333;
+  }
+  
+  .container .card .face.face2 .content a{
+    text-decoration:none;
+    color: black;
+    box-sizing: border-box;
+    outline : 1px dashed #333;
+    padding: 10px;
+    margin: 15px 0 0;
+    display: inline-block;
+  }
+  
+  .container .card .face.face2 .content a:hover{
+    background: #333 ;
+    color: whitesmoke; 
+    box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
+  }
+  
+  .icon {
+  width: 25%;
+    display: block;
+      margin-left: auto;
+      margin-right: auto;
+     align-content: center;
+  }
